// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReadMoreLink /> should not render anything if not visible 1`] = `""`;

exports[`<ReadMoreLink /> should render a button with correct label if expanded 1`] = `
<ReadMoreLink__ReadMoreButton
  onClick={[Function]}
>
  <Icon
    color="#0388cc"
    name="less"
    size={14}
  />
  <FormattedMessage
    id="global.less"
    values={Object {}}
  />
</ReadMoreLink__ReadMoreButton>
`;

exports[`<ReadMoreLink /> should render a button with correct label if not expanded 1`] = `
<ReadMoreLink__ReadMoreButton
  onClick={[Function]}
>
  <Icon
    color="#0388cc"
    name="plus"
    size={14}
  />
  <FormattedMessage
    id="global.more"
    values={Object {}}
  />
</ReadMoreLink__ReadMoreButton>
`;
